name:              haskell-exp
version:           1.0
synopsis:          Language feature TDD for Haskell
description:       Using Cabal as test framework for doctest and hspec
category:          LangFeature
build-type:        Simple
cabal-version:     >= 1.10

Library
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       LangFeature
  build-depends:        base >= 4 && < 5
                      , array

Source-Repository head
  type:                 git
  location:             https://github.com/fdilke/haskell-exp

executable haskell-exp
  default-language:     Haskell2010
  main-is:              Main.hs
  hs-source-dirs:       src
  build-depends:        base,
                        containers

Test-Suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test, LangFeature
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base
                      , hspec >= 1.3
                      , QuickCheck
                      , haskell-exp

